syntax = "proto3";

import "Account.proto";
import "Entity.proto";

package bestia;

option java_package = "net.bestia.message";
option java_outer_classname = "ChatProto";

/**
 * This message is send to the player in order to signal a (forced) logout from
 * the system. If the player disconnects by its own this message is not the
 * message to be send. In this case a {@link LogoutBroadcastMessage} will be
 * issued by the webserver so the zone can logout any pending entities
 * controlled by the player.
*/
message Chat {

    enum ChatMode {
        PUBLIC = 0;
        PARTY = 1;
        GUILD = 2;
        WHISPER = 3;
        SYSTEM = 4;
        GM_BROADCAST = 5;
        ERROR = 6;
        COMMAND = 7;
        BATTLE = 8;
    }

    Account account = 1;
    Entity entity = 2;

    ChatMode mode = 3;
    string text = 4;
    string senderNickname = 5;
    string receiverNickname = 6;
    uint32 chatMessageId = 7;
    uint64 time = 8;
}